apply plugin: 'java'
sourceCompatibility = 17
version = '1.0.0'
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.easymock:easymock:5.3.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'de.tum.in.ase:artemis-java-test-sandbox:1.13.0'
}

test {
    useJUnitPlatform()
    // Added for mock to work:
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
}

sourceSets {
    main {
        java {
            srcDir 'src'
        }
    }
    test {
        java {
            srcDir 'test'
        }
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
}
